sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:5: error: not found: value b
	while (b=true)
               ^AlgBubbleSort1:6: error: not found: value b
	for (i<-0 to a) {	b=false	
                                ^AlgBubbleSort1:8: error: not found: value b
			if (plusPetit(i+1,i)) {echange(i+1,i); b=true }
                                                               ^